# runestone

./: .coverage  .dockerignore  .env.example  .env.test  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .semgrepignore  AGENTS.md  AGENT_SWARM_PLAN.md  Dockerfile.backend  Dockerfile.frontend  Dockerfile.postgres-backup  Dockerfile.recall  Makefile  PROTECTED_ENDPOINTS.md  README.md  TESTING.md  agent-init.md  architectural-plan-word-replacement.md  autofill.md  batch-vocabulary-improvement-plan.md  conftest_improvements.md  di-refactoring.md  docker-compose.yaml  docker-compose.yml  docker-improvements.md  edit_vocab.md  ep_split.md  extra-info.md  feat-agent-memo.md  feat_chat_history_to_back.md  feat_users.md  frontend_auth_implementation_plan.md  grammar-section.md  main.py  option-2-enhanced-proposal.md  package-lock.json  package.json  prd.md  (+13 more)
.agent/workflows/: check-readiness.md
alembic/: env.py
alembic/versions/: 0d9c6a2b7f41_add_agent_side_effects_table.py  1c2d3e4f5a6b_add_personal_info_summary_to_users.py  26f00047b2cb_add_users_table_and_update_vocabulary_.py  2b8fd9c1a4e6_add_teacher_emotion_to_chat_messages.py  (+20 more)
cheatsheets/: adjectiv-komparation.md  hjalpverb.md  index.json  preterium.md  pronunciation.md  supinum.md  swedish_adjectives_cheatsheet.md  verb-forms.md
docs/: AGENT_SWARM_ASYNC_POST_DESIGN.md  AGENT_SWARM_ASYNC_POST_IMPLEMENTATION_PLAN.md  AGENT_SWARM_ASYNC_POST_REVIEW_FOLLOWUPS.md  AGENT_SWARM_CONTRACT.md  AGENT_SWARM_MEMORY_MAINTENANCE_PLAN.md  AGENT_SWARM_PLAN.md  AGENT_SWARM_REVIEW.md  README.md  TESTING.md  TOOL_DB_DI.md  agent-swarm-architecture.md  agent-swarm-plan.md  chat-redesign-plan.md  memory-maintainer.md  personal-info-status-redesign-chat-summary.md  postgres-container-tuning.md  protected-endpoints.md  recall-integration-test-plan.md  recall-state-persistence.md  testing.md  tool-db-di.md
feat/: edit-email.md
frontend/: .env.example  cleanup-test-processes.sh  eslint.security.config.js  index.html  nginx.conf  package-lock.json  package.json  vitest.config.ts
plans/: edit-email-implementation-status.md
scripts/: check_frontend_lockfile_sync.py  init-state.sh  init_user.py  migrate_memory_to_items.py  migrate_sqlite_to_postgres.py  postgres-backup.sh  reset_password.py  reset_postgres.sh  run_safety_precommit.py
tests/: __init__.py  conftest.py  test_analyzer.py  test_api.py  test_api_main.py  test_cli.py  test_config.py  test_db_repository.py  test_dependencies.py  test_frontend_lockfile_sync.py  test_integration.py  test_ocr.py  test_personal_info_summary_migration.py  test_postgres_backup.py  test_processor.py  test_recall_main.py  test_refactoring_analyses_stage3.md  test_services_vocabulary_service.py
(+438 files in other folders)
